Run iri with Java JRE 1.8